@@ -1,7 +1,7 @@
 
 # The R Commander and command logger
 
-# last modified 2012-12-19 by J. Fox
+# last modified 2013-01-02 by J. Fox
 #  applied patch to improve window behaviour supplied by Milan Bouchet-Valat 2011-09-22
 #   slight changes 12 Aug 04 by Ph. Grosjean
 #   changes 21 June 2007 by Erich Neuwirth for Excel support (marked EN)
@@ -243,7 +243,7 @@ Commander <- function(){
 		else .Tcl(paste("font configure RcmdrDefaultFont ", default.font))
 	}
 	.Tcl("ttk::style configure TButton -font RcmdrDefaultFont")
-	placement <- setOption("placement", "-40+20", global=FALSE)
+	placement <- setOption("placement", "+20+20", global=FALSE)
 	source.files <- list.files(etc, pattern="\\.[Rr]$")
 	for (file in source.files) {
 		source(file.path(etc, file))
@@ -339,7 +339,11 @@ Commander <- function(){
 		addModels <- description[grep("Models:", description)]
 		addModels <- gsub(" ", "", sub("^Models:", "", addModels))
 		addModels <- unlist(strsplit(addModels, ","))
+		addRcmdrModels <- description[grep("RcmdrModels:", description)]
+		addRcmdrModels <- gsub(" ", "", sub("^RcmdrModels:", "", addRcmdrModels))
+		addRcmdrModels <- unlist(strsplit(addRcmdrModels, ","))
 		if (length(addModels) > 0) modelClasses <- c(modelClasses, addModels)
+		if (length(addRcmdrModels) > 0) modelClasses <- c(modelClasses, addRcmdrModels)
 	}
 	putRcmdr("modelClasses", modelClasses)
 #	onEdit <- function(){
